# api-client-python

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: python.yml
digiseg_api/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
digiseg_api/api/: __init__.py  accounts_api.py  audiences_api.py  auth_api.py  campaigns_api.py  measurement_clients_api.py  measurement_labels_api.py  populations_api.py  studies_api.py  subscriptions_api.py  usage_api.py  users_api.py
digiseg_api/models/: __init__.py  access_token_data.py  account_aux.py  account_base.py  account_creation.py  account_creation_aux.py  account_full.py  account_include_aux.py  account_include_param.py  account_item.py  account_links.py  account_mutation.py  account_mutation_aux.py  account_owner_creation.py  account_sort_option.py  account_stripe_billing_info.py  account_subscription_base.py  account_subscription_creation.py  account_subscription_full.py  account_subscription_full_aux.py  account_subscription_item.py  account_subscription_item_aux.py  account_subscription_payment_configuration.py  account_subscriptions_summary.py  api_key_aux.py  api_key_base.py  api_key_creation.py  api_key_full.py  api_key_full_with_token.py  api_key_item.py  api_key_links.py  api_key_mutation.py  api_key_status.py  api_key_token.py  audience.py  audience_category_stats.py  audience_data_daily_usage.py  audience_data_monthly_usage.py  audience_data_realtime_usage.py  (+178 more)
examples/: authenticate_and_get_audiences.py  enrich_csv_file.py  use_api_key_to_get_audiences.py
